--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ huggingface_hub==0.23.0
 langchain_core==0.3.24
 langchain_huggingface==0.1.2
 langgraph==0.4.10
-protobuf==6.31.1
+protobuf>=3.20,<6
 pydantic==2.11.7
 python-dotenv==1.0.0
 pytz==2025.2
