--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,6 @@ python-dotenv==1.0.0
 pytz==2025.2
 Requests==2.32.4
 slowapi==0.1.9
-streamlit==1.41.1
+streamlit>=1.33,<2
 tenacity==8.5.0
 uvicorn==0.27.0
