--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-dateparser==1.2.2
-fastapi==0.109.1
-google_api_python_client==2.117.0
-google_auth_oauthlib==1.2.0
-huggingface_hub==0.23.0
-langchain_core==0.3.24
-langchain_huggingface==0.1.2
-langgraph==0.4.10
-protobuf>=3.20,<6
-pydantic==2.11.7
-python-dotenv==1.0.0
-pytz==2025.2
-Requests==2.32.4
-slowapi==0.1.9
-streamlit>=1.33,<2
-tenacity==8.5.0
-uvicorn==0.27.0
+dateparser
+fastapi
+google_api_python_client
+google_auth_oauthlib
+huggingface_hub
+langchain_core
+langchain_huggingface
+langgraph
+protobuf
+pydantic
+python-dotenv
+pytz
+Requests
+slowapi
+streamlit
+tenacity
+uvicorn
